--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,6 @@
 <div class="login-container">
-    <form class="login-form" method="post" action="/api/v1/users/login">
-        <h2>Datos de inicio</h2>
+    <form class="login-form" method="post" action="/api/v1/users/register">
+        <h2>Registro</h2>
         <div class="input-group">
             <i class="fas fa-user"></i>
             <input name="username" type="text" placeholder="Nombre de usuario" required>
@@ -9,6 +9,6 @@
             <i class="fas fa-lock"></i>
             <input name="password" type="password" placeholder="Contraseña" required>
         </div>
-        <button type="submit">Iniciar sesión</button>
+        <button type="submit">Registrarse</button>
     </form>
 </div>
