admin user predefined added

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,5 +10,6 @@
             <input name="password" type="password" placeholder="Contraseña" required>
         </div>
         <button type="submit">Iniciar sesión</button>
+        <p style = "text-align: center;">¿No tienes una cuenta? <a href="/api/v1/users/register">Regístrate aquí</a></p>
     </form>
 </div>
