--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <form class="login-form" method="post" action="/api/v1/users/login">
+    <form class="login-form" method="post" action="/users/login">
         <h2>Datos de inicio</h2>
         <div class="input-group">
             <i class="fas fa-user"></i>
@@ -10,6 +10,6 @@
             <input name="password" type="password" placeholder="Contraseña" required>
         </div>
         <button type="submit">Iniciar sesión</button>
-        <p style = "text-align: center;">¿No tienes una cuenta? <a href="/api/v1/users/register">Regístrate aquí</a></p>
+        <p style = "text-align: center;">¿No tienes una cuenta? <a href="/users/register">Regístrate aquí</a></p>
     </form>
 </div>
