--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <form class="login-form" method="post" action="/api/v1/users/register">
+    <form class="login-form" method="post" action="/users/register">
         <h2>Registro</h2>
         <div class="input-group">
             <i class="fas fa-user"></i>
