urls of login and redirections

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,5 +1,5 @@
 <div class="admin-container">
-    <form class="admin-form" method="post" action="/products/add" enctype="multipart/form-data">
+    <form class="admin-form" method="post" action="/products/admin/add" enctype="multipart/form-data">
         <h2>Agregar Nuevo Producto</h2>
         <div class="input-group">
             <i class="fas fa-box"></i>
