--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@
 
 :root {
   --primary-color: #5ab2ff;
+  --secondary-color: #7f7f7f;
   --text-color: #333333;
   --background-color: #f0f0f0;
   --white: #ffffff;
@@ -15,6 +16,16 @@ body {
   padding: 0;
   background-color: var(--background-color);
   color: var(--text-color);
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mr-2 {
+  margin-right: 20px;
 }
 
 /* Login Page */
@@ -80,6 +91,36 @@ button[type="submit"]:hover {
 }
 
 /* Admin Page */
+.button-secondary {
+  padding: 10px;
+  background-color: var(--secondary-color);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.button-secondary:hover {
+  background-color: #4d99e0;
+}
+
+.button-alert {
+  padding: 10px;
+  background-color: rgb(255, 71, 71);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.button-alert:hover {
+  background-color: #ff5252;
+}
+
 .admin-container {
   display: flex;
   justify-content: center;
@@ -184,3 +225,64 @@ button[type="submit"]:hover {
 .add-to-cart:hover {
   background-color: #4d99e0;
 }
+
+/* Cart */
+.cart {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.cart-button {
+  background-color: var(--primary-color);
+  color: var(--white);
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  position: relative;
+}
+
+.cart-button i {
+  font-size: 24px;
+}
+
+.cart-button span {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: var(--white);
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.cart-content {
+  display: none;
+  position: absolute;
+  bottom: 50px;
+  right: 0;
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius);
+  padding: 20px;
+  width: 300px;
+}
+
+.cart-content h3 {
+  margin-top: 0;
+  color: var(--primary-color);
+}
+
+.cart-content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.cart-content li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
