purchase history implementation

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -23,4 +23,7 @@
         </div>
         <button type="submit">Agregar Producto</button>
     </form>
+    <div class = "button-container">
+        <button class="button-back" onclick="window.location='/products'">⬅ Volver a Productos</button>
+    </div>
 </div>
