--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,10 @@ body {
   color: var(--text-color);
 }
 
+h1 {
+  text-align: center;
+}
+
 .row {
   display: flex;
   justify-content: space-between;
@@ -341,5 +345,80 @@ button[type="submit"]:hover {
 }
 
 .invoice-container button:hover {
+  background-color: #4d99e0;
+}
+
+/* History Page */
+.history-container {
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: var(--white);
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius);
+  padding: 20px;
+}
+
+.history-container .purchase {
+  margin-bottom: 20px;
+  padding: 20px;
+  border-bottom: 1px solid var(--background-color);
+}
+
+.history-container .purchase h2 {
+  color: var(--primary-color);
+  margin-top: 0;
+}
+
+.history-container .purchase ul {
+  list-style: none;
+  padding: 0;
+}
+
+.history-container .purchase li {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.history-container .purchase p {
+  text-align: right;
+  font-weight: bold;
+  color: var(--primary-color);
+}
+
+.history-container button {
+  padding: 10px 20px;
+  background-color: var(--secondary-color);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.history-container button:hover {
+  background-color: #4d99e0;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkout-button {
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.checkout-button:hover {
   background-color: #4d99e0;
 }
