--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,50 +32,33 @@ h1 {
   margin-right: 20px;
 }
 
-/* Login Page */
+/* Buttons */
 
-.login-container {
+.back-button-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  margin-top: 20px;
 }
 
-.login-form {
-  background-color: var(--white);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  padding: 30px;
-  max-width: 400px;
-  width: 100%;
-}
-
-.login-form h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: var(--primary-color);
-}
-
-.input-group {
-  margin-bottom: 20px;
-  position: relative;
-}
-
-.input-group i {
-  position: absolute;
-  left: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #888;
-}
-
-.input-group input {
-  padding: 10px 40px 10px 30px;
-  border: 1px solid #ddd;
+.button-back {
+  padding: 10px 20px;
+  background-color: var(--secondary-color);
+  color: var(--white);
+  border: none;
   border-radius: 5px;
-  width: 100%;
-  box-sizing: border-box;
+  cursor: pointer;
   font-size: 16px;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+}
+
+.button-back:hover {
+  background-color: #4d99e0;
+}
+
+.button-back i {
+  margin-right: 8px;
 }
 
 button[type="submit"] {
@@ -94,7 +77,28 @@ button[type="submit"]:hover {
   background-color: #4d99e0;
 }
 
-/* Admin Page */
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkout-button {
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.checkout-button:hover {
+  background-color: #4d99e0;
+}
+
 .button-secondary {
   padding: 10px;
   background-color: var(--secondary-color);
@@ -125,300 +129,25 @@ button[type="submit"]:hover {
   background-color: #ff5252;
 }
 
-.admin-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.admin-form {
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
-  padding: 30px;
-  max-width: 600px;
-  width: 100%;
-}
-
-.admin-form h2 {
-  text-align: center;
+/* Inputs */
+.input-group {
   margin-bottom: 20px;
-  color: var(--primary-color);
+  position: relative;
 }
 
-.admin-form .input-group {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+.input-group i {
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
 }
 
-.admin-form .input-group i {
-    margin-right: 10px;
-    color: var(--primary-color);
-}
-
-.admin-form .input-group .textarea-wrapper {
-    flex: 1;
-    justify-items: start;
-
-}
-
-.admin-form .input-group textarea {
+.input-group input {
   padding: 10px 40px 10px 30px;
   border: 1px solid #ddd;
   border-radius: 5px;
   width: 100%;
   box-sizing: border-box;
   font-size: 16px;
-  resize: none;
-  height: 150px;
-}
-
-/* Products Page */
-.products-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.products-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 20px;
-}
-
-.product-card {
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-}
-
-.product-card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.product-info {
-  padding: 20px;
-}
-
-.product-info h3 {
-  margin-top: 0;
-  color: var(--primary-color);
-}
-
-.product-info p {
-  margin-bottom: 10px;
-}
-
-.add-to-cart {
-  padding: 10px;
-  background-color: var(--primary-color);
-  color: var(--white);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 100%;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.add-to-cart:hover {
-  background-color: #4d99e0;
-}
-
-/* Cart */
-.cart {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
-
-.cart-button {
-  background-color: var(--primary-color);
-  color: var(--white);
-  border: none;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  position: relative;
-}
-
-.cart-button i {
-  font-size: 24px;
-}
-
-.cart-button span {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background-color: red;
-  color: var(--white);
-  border-radius: 50%;
-  padding: 5px;
-}
-
-.cart-content {
-  display: none;
-  position: absolute;
-  bottom: 50px;
-  right: 0;
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
-  padding: 20px;
-  width: 300px;
-}
-
-.cart-content h3 {
-  margin-top: 0;
-  color: var(--primary-color);
-}
-
-.cart-content ul {
-  list-style: none;
-  padding: 0;
-}
-
-.cart-content li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-/* Invoice */
-.invoice-container {
-  max-width: 800px;
-  margin: 0 auto;
-  margin-top: 150px;
-  padding: 20px;
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
-}
-
-.invoice-container h2 {
-  text-align: center;
-  color: var(--primary-color);
-}
-
-.invoice-container table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-}
-
-.invoice-container th,
-.invoice-container td {
-  padding: 10px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
-.invoice-container th {
-  background-color: var(--primary-color);
-  color: var(--white);
-}
-
-.invoice-container h3 {
-  text-align: right;
-  color: var(--primary-color);
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.invoice-container button {
-  display: block;
-  margin: 0 auto;
-  padding: 10px 20px;
-  background-color: var(--primary-color);
-  color: var(--white);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.invoice-container button:hover {
-  background-color: #4d99e0;
-}
-
-/* History Page */
-.history-container {
-  max-width: 800px;
-  margin: 20px auto;
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
-  padding: 20px;
-}
-
-.history-container .purchase {
-  margin-bottom: 20px;
-  padding: 20px;
-  border-bottom: 1px solid var(--background-color);
-}
-
-.history-container .purchase h2 {
-  color: var(--primary-color);
-  margin-top: 0;
-}
-
-.history-container .purchase ul {
-  list-style: none;
-  padding: 0;
-}
-
-.history-container .purchase li {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 5px;
-}
-
-.history-container .purchase p {
-  text-align: right;
-  font-weight: bold;
-  color: var(--primary-color);
-}
-
-.history-container button {
-  padding: 10px 20px;
-  background-color: var(--secondary-color);
-  color: var(--white);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.history-container button:hover {
-  background-color: #4d99e0;
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.checkout-button {
-  padding: 10px;
-  background-color: var(--primary-color);
-  color: var(--white);
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 100%;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.checkout-button:hover {
-  background-color: #4d99e0;
 }
