--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,6 +1,6 @@
 <div class="admin-container">
     <form class="admin-form" method="post" action="/products/admin/add" enctype="multipart/form-data">
-        <h2>Agregar Nuevo Producto</h2>
+        <h2>Información del Producto</h2>
         <div class="input-group">
             <i class="fas fa-box"></i>
             <input name="name" type="text" placeholder="Nombre del Producto" required>
@@ -23,7 +23,7 @@
         </div>
         <button type="submit">Agregar Producto</button>
     </form>
-    <div class = "button-container">
-        <button class="button-back" onclick="window.location='/products'">⬅ Volver a Productos</button>
+    <div class="back-button-container">
+        <button class="button-back" onclick="window.location='/products'">⬅ Regresar</button>
     </div>
 </div>
