--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    {{#if bodyClass}}
+    <link rel="stylesheet" href="/css/{{bodyClass}}.css">
+    {{/if}}
 </head>
-
-<body>
+<body class="{{bodyClass}}">
     {{{body}}}
 </body>
-
 </html>
