--- a/views/history.hbs
+++ b/views/history.hbs
@@ -10,7 +10,7 @@
   <div class="history-container">
     {{#each purchaseHistory}}
       <div class="purchase">
-        <h2>Compra #{{this.id}} - {{this.date}}</h2>
+        <h2>Compra #{{this.id}} - <span class="purchase-date">{{this.date}}</span></h2>
         <ul>
           {{#each this.products}}
             <li>{{this.product.name}} x {{this.quantity}} - ${{this.product.price}}</li>
@@ -23,5 +23,6 @@
   <div class="button-container">
     <button class="button-secondary" onclick="window.location.href='/products'">Volver a Productos</button>
   </div>
+  <script src="/js/products.js"></script>
 </body>
 </html>
