--- a/public/css/login.css
+++ b/public/css/login.css
@@ -43,3 +43,13 @@
   box-sizing: border-box;
   font-size: 16px;
 }
+
+.error-message {
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 10px;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  text-align: center;
+}
