--- a/views/history.hbs
+++ b/views/history.hbs
@@ -10,7 +10,7 @@
   <div class="history-container">
     {{#each purchaseHistory}}
       <div class="purchase">
-        <h2>Compra #{{this.id}} - <span class="purchase-date">{{this.date}}</span></h2>
+        <h2>Compra #{{this.number}} - <span class="purchase-date">{{this.date}}</span></h2>
         <ul>
           {{#each this.products}}
             <li>{{this.product.name}} x {{this.quantity}} - ${{this.product.price}}</li>
