--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,15 +1,18 @@
 <div class="login-container">
-    <form class="login-form" method="post" action="/users/login">
-        <h2>Datos de inicio</h2>
-        <div class="input-group">
-            <i class="fas fa-user"></i>
-            <input name="username" type="text" placeholder="Nombre de usuario" required>
-        </div>
-        <div class="input-group">
-            <i class="fas fa-lock"></i>
-            <input name="password" type="password" placeholder="Contraseña" required>
-        </div>
-        <button type="submit">Iniciar sesión</button>
-        <p style = "text-align: center;">¿No tienes una cuenta? <a href="/users/register">Regístrate aquí</a></p>
-    </form>
+  <form class="login-form" method="post" action="/users/login">
+    <h2>Datos de inicio</h2>
+    {{#if errorMessage}}
+      <div class="error-message">{{errorMessage}}</div>
+    {{/if}}
+    <div class="input-group">
+      <i class="fas fa-user"></i>
+      <input name="username" type="text" placeholder="Nombre de usuario" required>
+    </div>
+    <div class="input-group">
+      <i class="fas fa-lock"></i>
+      <input name="password" type="password" placeholder="Contraseña" required>
+    </div>
+    <button type="submit">Iniciar sesión</button>
+    <p style="text-align: center;">¿No tienes una cuenta? <a href="/users/register">Regístrate aquí</a></p>
+  </form>
 </div>
