--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,14 +1,17 @@
 <div class="login-container">
-    <form class="login-form" method="post" action="/users/register">
-        <h2>Registro</h2>
-        <div class="input-group">
-            <i class="fas fa-user"></i>
-            <input name="username" type="text" placeholder="Nombre de usuario" required>
-        </div>
-        <div class="input-group">
-            <i class="fas fa-lock"></i>
-            <input name="password" type="password" placeholder="Contraseña" required>
-        </div>
-        <button type="submit">Registrarse</button>
-    </form>
+  <form class="login-form" method="post" action="/users/register">
+    <h2>Registro</h2>
+    {{#if errorMessage}}
+      <div class="error-message">{{errorMessage}}</div>
+    {{/if}}
+    <div class="input-group">
+      <i class="fas fa-user"></i>
+      <input name="username" type="text" placeholder="Nombre de usuario" required>
+    </div>
+    <div class="input-group">
+      <i class="fas fa-lock"></i>
+      <input name="password" type="password" placeholder="Contraseña" required>
+    </div>
+    <button type="submit">Registrarse</button>
+  </form>
 </div>
