--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -32,7 +32,7 @@
             {{/each}}
           </tbody>
         </table>
-        <h3>Total: ${{purchase.totalAmount}}</h3>
+        <h3>Total: ${{toFixed purchase.totalAmount 2}}</h3>
         <div class="button-container">
           <button style = "background-color: #5cc65c" onclick="window.print()">Imprimir Factura</button>
           <button class="button-secondary mr-2" onclick="window.location.href='/products'">Volver a Productos</button>
