--- a/public/css/history.css
+++ b/public/css/history.css
@@ -12,6 +12,12 @@
   margin-bottom: 20px;
   padding: 20px;
   border-bottom: 1px solid var(--background-color);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.history-container .purchase:hover {
+  background-color: var(--background-color);
 }
 
 .history-container .purchase h2 {
